--- a/roles/gog/handlers/main.yml
+++ b/roles/gog/handlers/main.yml
@@ -1,6 +1,6 @@
 - name: reload systemd
-  sudo: yes
+  become: true
   command: systemctl daemon-reload
 - name: restart gog
-  sudo: yes
+  become: true
   command: systemctl restart gog
