--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -26,6 +26,18 @@
         state: absent
   when: docker_install_state.rc > 0
 
+- name: install pip
+  become: true
+  easy_install: 
+    name: pip 
+    state: latest
+
+- name: install docker-py
+  become: true
+  pip:
+    name: docker-py
+    state: latest
+
 - name: ensure docker service is running
   service:
     name: docker
