--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: rasp
   roles:
-    - gog
-    - elasticsearch
+    - docker
+    #- gog
+    #- elasticsearch
     - mysql
-    - symfony
+    #- symfony
